cant fit main sequence stars

--- a/data_selector_sdss4.ipynb
+++ b/data_selector_sdss4.ipynb
@@ -138,7 +138,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████| 22563/22563 [00:04<00:00, 4951.09it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████| 22563/22563 [00:15<00:00, 1425.31it/s]\n"
      ]
     }
    ],
@@ -189,21 +189,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SDSS_CODE1 = \"\"\"select bestObjID, specObjID, plate, fiberID, mjd \n",
-    "    from dbo.SpecObjAll\n",
-    "    where bestObjID > 1237648702985666868\n",
-    "    and bestObjID < 1237660529738105365\n",
-    "    and class = 'STAR'\"\"\"\n",
-    "SDSS_CODE2 = \"\"\"select bestObjID, specObjID, plate, fiberID, mjd \n",
-    "    from dbo.SpecObjAll\n",
-    "    where bestObjID > 1237660529738105365\n",
-    "    and bestObjID < 1237670529738105366\n",
-    "    and class = 'STAR'\"\"\"\n",
-    "SDSS_CODE3 = \"\"\"select bestObjID, specObjID, plate, fiberID, mjd \n",
-    "    from dbo.SpecObjAll\n",
-    "    where bestObjID > 1237670529738105366\n",
-    "    and bestObjID < 1237680529738105576\n",
-    "    and class = 'STAR'\"\"\""
+    "SDSS_CODE1 = \"\"\"select sp.bestObjID, sp.specObjID, sp.plate, sp.fiberID, sp.mjd, sp.subclass, ph.u, ph.g, ph.r, ph.i, ph.z\n",
+    "    from dbo.SpecObjAll as sp\n",
+    "    join dbo.PhotoObjAll as ph \n",
+    "    on sp.bestObjID = ph.objID\n",
+    "    where sp.bestObjID > 1237648702985666868\n",
+    "    and sp.bestObjID < 1237660529738105365\n",
+    "    and sp.class = 'STAR'\"\"\"\n",
+    "SDSS_CODE2 = \"\"\"select sp.bestObjID, sp.specObjID, sp.plate, sp.fiberID, sp.mjd, sp.subclass, ph.u, ph.g, ph.r, ph.i, ph.z\n",
+    "    from dbo.SpecObjAll as sp\n",
+    "    join dbo.PhotoObjAll as ph \n",
+    "    on ph.objID = sp.bestObjID\n",
+    "    where sp.bestObjID > 1237660529738105365\n",
+    "    and sp.bestObjID < 1237670529738105366\n",
+    "    and sp.class = 'STAR'\"\"\"\n",
+    "SDSS_CODE3 = \"\"\"select sp.bestObjID, sp.specObjID, sp.plate, sp.fiberID, sp.mjd, sp.subclass, ph.u, ph.g, ph.r, ph.i, ph.z\n",
+    "    from dbo.SpecObjAll as sp\n",
+    "    join dbo.PhotoObjAll as ph \n",
+    "    on ph.objID = sp.bestObjID\n",
+    "    where sp.bestObjID > 1237670529738105366\n",
+    "    and sp.bestObjID < 1237680529738105576\n",
+    "    and sp.class = 'STAR'\"\"\""
    ]
   },
   {
@@ -211,11 +217,40 @@
    "execution_count": 10,
    "id": "d139835e-27dc-48f8-9baf-252547595f2e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\arsen\\anaconda3\\lib\\site-packages\\astroquery\\sdss\\core.py:874: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
+      "  arr = np.atleast_1d(np.genfromtxt(io.BytesIO(response.content),\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   subclass   \n",
+      "--------------\n",
+      "            B6\n",
+      " A4p (G_37-26)\n",
+      "            F5\n",
+      "            F9\n",
+      "            A0\n",
+      "            F9\n",
+      "            CV\n",
+      "M5III (221615)\n",
+      "            K1\n",
+      "            F9\n"
+     ]
+    }
+   ],
    "source": [
     "convert1= SDSS.query_sql(SDSS_CODE1)\n",
     "convert2= SDSS.query_sql(SDSS_CODE2)\n",
-    "convert3= SDSS.query_sql(SDSS_CODE3)"
+    "convert3= SDSS.query_sql(SDSS_CODE3)\n",
+    "\n",
+    "print(convert1['subclass'][:10])"
    ]
   },
   {
@@ -223,10 +258,43 @@
    "execution_count": 11,
    "id": "4c353955-6bb4-4204-a5e1-a83c234189a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   subclass   \n",
+      "--------------\n",
+      "            B6\n",
+      " A4p (G_37-26)\n",
+      "            F5\n",
+      "            F9\n",
+      "            A0\n",
+      "            F9\n",
+      "            CV\n",
+      "M5III (221615)\n",
+      "            K1\n",
+      "            F9\n",
+      "           ...\n",
+      "F3/F5V (30743)\n",
+      "   F2V (33256)\n",
+      "F3/F5V (30743)\n",
+      "   K0V (10780)\n",
+      "F3/F5V (30743)\n",
+      "    G0 (63791)\n",
+      "M5III (221615)\n",
+      " M3III (44478)\n",
+      " K5Ve (118100)\n",
+      "F3/F5V (30743)\n",
+      "     CalciumWD\n",
+      "Length = 993190 rows\n"
+     ]
+    }
+   ],
    "source": [
     "twide_convert = vstack([convert1, convert2, convert3])\n",
-    "wide_convert = twide_convert"
+    "wide_convert = twide_convert\n",
+    "print(wide_convert['subclass'])"
    ]
   },
   {
@@ -239,10 +307,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|████████████████████████████████████████████████████████████████████████████| 6291/6291 [00:06<00:00, 1032.16it/s]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████| 6291/6291 [00:14<00:00, 444.62it/s]\n",
       "  0%|                                                                                          | 0/175 [00:00<?, ?it/s]C:\\Users\\arsen\\anaconda3\\lib\\site-packages\\astroquery\\sdss\\core.py:874: VisibleDeprecationWarning: Reading unicode strings without specifying the encoding argument is deprecated. Set the encoding, use None for the system default.\n",
       "  arr = np.atleast_1d(np.genfromtxt(io.BytesIO(response.content),\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████| 175/175 [00:00<00:00, 1255.88it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 175/175 [00:00<00:00, 519.12it/s]\n"
      ]
     }
    ],
@@ -252,6 +320,12 @@
     "    plate = []\n",
     "    mjd = []\n",
     "    fiberid = []\n",
+    "    sclass = []\n",
+    "    u = []\n",
+    "    g = []\n",
+    "    r = []\n",
+    "    i = []\n",
+    "    z = []\n",
     "    \n",
     "    url = []\n",
     "    \n",
@@ -272,6 +346,15 @@
     "                plate.append(wide_convert['plate'][k])\n",
     "                mjd.append(wide_convert['mjd'][k])\n",
     "                fiberid.append(wide_convert['fiberID'][k])\n",
+    "                try:\n",
+    "                    sclass.append(wide_convert['subclass'][k])\n",
+    "                except:\n",
+    "                    pass\n",
+    "                #u.append(wide_convert['u'][k])\n",
+    "                #g.append(wide_convert['g'][k])\n",
+    "                #r.append(wide_convert['r'][k])\n",
+    "                #i.append(wide_convert['i'][k])\n",
+    "                #z.append(wide_convert['z'][k])\n",
     "            except:\n",
     "                notfound = True\n",
     "        if notfound:\n",
@@ -282,25 +365,63 @@
     "        url.append(str(xid[0]).split(' ')[4])\n",
     "    \n",
     "    \n",
-    "    return drops, sourceobjid, plate, mjd, fiberid, url\n",
+    "    return drops, sourceobjid, plate, mjd, fiberid, url, u, g, r,i,z, sclass\n",
     "\n",
-    "drops1, sourceobjid1, plate1, mjd1, fiberID1, url1 = search( catalog['bestobjid1'] )\n"
+    "drops1, sourceobjid1, plate1, mjd1, fiberID1, url1 ,u1,g1,r1,i1,z1, subclass1= search( catalog['bestobjid1'] )\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "8571d050-28f2-4455-8be3-6a246c5bc8ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(u1)\n",
+    "print(z1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "088d0029-13a6-471a-8495-5312b9512dc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6291\n",
+      "16272\n"
+     ]
+    }
+   ],
    "source": [
+    "print(len(catalog))\n",
+    "print(len(drops))\n",
+    "\n",
     "catalog = catalog.drop(drops1)\n",
     "\n",
-    "catalog['specbjid1'] = sourceobjid1\n",
+    "catalog['specobjid1'] = sourceobjid1\n",
     "catalog['plate1'] = plate1\n",
     "catalog['mjd1'] = mjd1\n",
     "catalog['fiberID1'] = fiberID1\n",
     "catalog['url1'] = url1\n",
+    "catalog['subclass1'] = subclass1\n",
+    "#catalog['u1'] = u1\n",
+    "#catalog['g1'] = g1\n",
+    "#catalog['r1'] = r1\n",
+    "#catalog['i1'] = i1\n",
+    "#catalog['z1'] = z1\n",
     "\n",
     "'''\n",
     "\n",
@@ -315,44 +436,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "440dffdb-7948-4d84-9056-fa58a10d6810",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "175\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████████| 175/175 [00:00<00:00, 864.17it/s]\n",
-      "100%|████████████████████████████████████████████████████████████████████████████████| 14/14 [00:00<00:00, 1316.01it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████████| 175/175 [00:00<00:00, 448.11it/s]\n",
+      "100%|█████████████████████████████████████████████████████████████████████████████████| 14/14 [00:00<00:00, 804.66it/s]\n"
      ]
     }
    ],
    "source": [
-    "drops2, sourceobjid2, plate2, mjd2, fiberID2, url2 = search( catalog['bestobjid2'] )"
+    "print(len(catalog))\n",
+    "\n",
+    "drops2, sourceobjid2, plate2, mjd2, fiberID2, url2, u2,g2,r2,i2,z2, subclass2 = search( catalog['bestobjid2'] )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "15530b91-91e2-4cf1-99e5-21ab02531d93",
    "metadata": {},
    "outputs": [],
    "source": [
     "catalog = catalog.drop(drops2)\n",
     "\n",
-    "catalog['specbjid2'] = sourceobjid2\n",
+    "catalog['specobjid2'] = sourceobjid2\n",
     "catalog['plate2'] = plate2\n",
     "catalog['mjd2'] = mjd2\n",
     "catalog['fiberID2'] = fiberID2\n",
     "catalog['url2'] = url2\n",
+    "catalog['subclass2'] = subclass2\n",
+    "#catalog['u2'] = u2\n",
+    "#catalog['g2'] = g2\n",
+    "#catalog['r2'] = r2\n",
+    "#catalog['i2'] = i2\n",
+    "#catalog['z2'] = z2\n",
     "\n",
     "catalog.reset_index(inplace=True, drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "6d528994-3315-4179-a5fd-1573a40bcfa5",
    "metadata": {},
    "outputs": [
@@ -392,55 +528,71 @@
       "12  3671977891669036416     1006597507     1086737974      2016.0      2016.0   \n",
       "13   921518807117547904      249805182      528928061      2016.0      2016.0   \n",
       "\n",
-      "           ra1         ra2  ...     specbjid1  plate1   mjd1  fiberID1  \\\n",
-      "0   149.087276  149.087709  ...  2.637020e+18    2342  53742       591   \n",
-      "1   144.538649  144.538120  ...  2.904945e+18    2580  54092       447   \n",
-      "2   147.106408  147.340195  ...  5.405900e+17     480  51989       575   \n",
-      "3    20.450497   20.447757  ...  7.836800e+17     696  52209       195   \n",
-      "4    21.114439   21.108928  ...  4.761588e+18    4229  55501       573   \n",
-      "5   224.355161  224.357726  ...  2.420764e+18    2150  54510       288   \n",
-      "6   323.108471  323.107999  ...  2.208005e+18    1961  53299       419   \n",
-      "7   177.213235  177.210536  ...  2.241758e+18    1991  53446       331   \n",
-      "8    59.637267   59.637700  ...  2.331882e+18    2071  53741       520   \n",
-      "9    53.040207   53.038552  ...  8.028818e+17     713  52178       419   \n",
-      "10  190.323826  190.304078  ...  1.907372e+18    1694  53472       356   \n",
-      "11  125.639739  125.641288  ...  2.168495e+18    1926  53317        41   \n",
-      "12  208.740817  208.727278  ...  9.628168e+17     855  52375       627   \n",
-      "13  120.964228  120.847286  ...  6.137164e+17     545  52202       367   \n",
+      "           ra1         ra2  ...   mjd1  fiberID1  \\\n",
+      "0   149.087276  149.087709  ...  56282        66   \n",
+      "1   144.538649  144.538120  ...  54092       447   \n",
+      "2   147.106408  147.340195  ...  55645       657   \n",
+      "3    20.450497   20.447757  ...  52202        31   \n",
+      "4    21.114439   21.108928  ...  55501       573   \n",
+      "5   224.355161  224.357726  ...  54510       288   \n",
+      "6   323.108471  323.107999  ...  53299       419   \n",
+      "7   177.213235  177.210536  ...  53446       331   \n",
+      "8    59.637267   59.637700  ...  53741       520   \n",
+      "9    53.040207   53.038552  ...  52178       419   \n",
+      "10  190.323826  190.304078  ...  53472       356   \n",
+      "11  125.639739  125.641288  ...  53317        41   \n",
+      "12  208.740817  208.727278  ...  52375       627   \n",
+      "13  120.964228  120.847286  ...  52202       367   \n",
       "\n",
-      "                                                 url1     specbjid2  plate2  \\\n",
-      "0   https://data.sdss.org/sas/dr14/sdss/spectro/re...  2.640320e+18    2345   \n",
-      "1   https://data.sdss.org/sas/dr14/sdss/spectro/re...  5.984249e+18    5315   \n",
-      "2   https://data.sdss.org/sas/dr14/sdss/spectro/re...  5.340335e+18    4743   \n",
-      "3   https://data.sdss.org/sas/dr14/sdss/spectro/re...  4.760370e+18    4228   \n",
-      "4   https://data.sdss.org/sas/dr14/sdss/spectro/re...  1.214965e+18    1079   \n",
-      "5   https://data.sdss.org/sas/dr14/sdss/spectro/re...  6.648442e+18    5905   \n",
-      "6   https://data.sdss.org/sas/dr14/sdss/spectro/re...  4.722238e+18    4194   \n",
-      "7   https://data.sdss.org/sas/dr14/sdss/spectro/re...  5.195127e+18    4614   \n",
-      "8   https://data.sdss.org/sas/dr14/sdss/spectro/re...  2.331882e+18    2071   \n",
-      "9   https://data.sdss.org/sas/dr14/sdss/spectro/re...  1.196934e+18    1063   \n",
-      "10  https://data.sdss.org/sas/dr14/sdss/spectro/re...  1.819464e+18    1616   \n",
-      "11  https://data.sdss.org/sas/dr14/sdss/spectro/re...  2.169737e+18    1927   \n",
-      "12  https://data.sdss.org/sas/dr14/sdss/spectro/re...  5.476412e+18    4864   \n",
-      "13  https://data.sdss.org/sas/dr14/sdss/spectro/re...  6.137043e+17     545   \n",
+      "                                                 url1       subclass1  \\\n",
+      "0   https://data.sdss.org/sas/dr14/sdss/spectro/re...        WDhotter   \n",
+      "1   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M4   \n",
+      "2   https://data.sdss.org/sas/dr14/sdss/spectro/re...              CV   \n",
+      "3   https://data.sdss.org/sas/dr14/sdss/spectro/re...              OB   \n",
+      "4   https://data.sdss.org/sas/dr14/sdss/spectro/re...  M5III (221615)   \n",
+      "5   https://data.sdss.org/sas/dr14/sdss/spectro/re...        CarbonWD   \n",
+      "6   https://data.sdss.org/sas/dr14/sdss/spectro/re...              K7   \n",
+      "7   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M3   \n",
+      "8   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M5   \n",
+      "9   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M4   \n",
+      "10  https://data.sdss.org/sas/dr14/sdss/spectro/re...              M4   \n",
+      "11  https://data.sdss.org/sas/dr14/sdss/spectro/re...              M3   \n",
+      "12  https://data.sdss.org/sas/dr14/sdss/spectro/re...              M7   \n",
+      "13  https://data.sdss.org/sas/dr14/sdss/spectro/re...              M5   \n",
       "\n",
-      "     mjd2  fiberID2                                               url2  \n",
-      "0   53757       309  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "1   55978       330  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "2   55645       696  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "3   55484       238  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "4   52621       431  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "5   56065        10  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "6   55450       776  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "7   55604       816  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "8   53741       520  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "9   52591       373  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "10  53169        36  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "11  53321       464  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "12  55680       128  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
-      "13  52202       323  https://data.sdss.org/sas/dr14/sdss/spectro/re...  \n",
+      "      specobjid2  plate2   mjd2  fiberID2  \\\n",
+      "0   2.640320e+18    2345  53757       309   \n",
+      "1   5.984249e+18    5315  55978       330   \n",
+      "2   5.340335e+18    4743  55645       696   \n",
+      "3   4.760370e+18    4228  55484       238   \n",
+      "4   1.214965e+18    1079  52621       431   \n",
+      "5   6.648442e+18    5905  56065        10   \n",
+      "6   4.722238e+18    4194  55450       776   \n",
+      "7   5.195127e+18    4614  55604       816   \n",
+      "8   2.331882e+18    2071  53741       520   \n",
+      "9   2.307095e+18    2049  53350       458   \n",
+      "10  1.819464e+18    1616  53169        36   \n",
+      "11  2.169737e+18    1927  53321       464   \n",
+      "12  5.476412e+18    4864  55680       128   \n",
+      "13  6.137043e+17     545  52202       323   \n",
       "\n",
-      "[14 rows x 229 columns]\n"
+      "                                                 url2       subclass2  \n",
+      "0   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M5  \n",
+      "1   https://data.sdss.org/sas/dr14/sdss/spectro/re...        WDhotter  \n",
+      "2   https://data.sdss.org/sas/dr14/sdss/spectro/re...  M6III (148783)  \n",
+      "3   https://data.sdss.org/sas/dr14/sdss/spectro/re...  M5III (221615)  \n",
+      "4   https://data.sdss.org/sas/dr14/sdss/spectro/re...              WD  \n",
+      "5   https://data.sdss.org/sas/dr14/sdss/spectro/re...  M6III (148783)  \n",
+      "6   https://data.sdss.org/sas/dr14/sdss/spectro/re...        WDhotter  \n",
+      "7   https://data.sdss.org/sas/dr14/sdss/spectro/re...              CV  \n",
+      "8   https://data.sdss.org/sas/dr14/sdss/spectro/re...              M5  \n",
+      "9   https://data.sdss.org/sas/dr14/sdss/spectro/re...              WD  \n",
+      "10  https://data.sdss.org/sas/dr14/sdss/spectro/re...              OB  \n",
+      "11  https://data.sdss.org/sas/dr14/sdss/spectro/re...              WD  \n",
+      "12  https://data.sdss.org/sas/dr14/sdss/spectro/re...        WDcooler  \n",
+      "13  https://data.sdss.org/sas/dr14/sdss/spectro/re...              WD  \n",
+      "\n",
+      "[14 rows x 231 columns]\n"
      ]
     }
    ],
@@ -450,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "66748c76-bd60-4b7f-9598-c23375a5dbd2",
    "metadata": {},
    "outputs": [],
