GAIA IS DOWN AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAH

--- a/photometry.ipynb
+++ b/photometry.ipynb
@@ -19,6 +19,7 @@
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "import sys\n",
+    "sys.path.append('../')\n",
     "sys.path.append('../wdtools')\n",
     "sys.path.append('../corv/src')\n",
     "\n",
@@ -35,25 +36,27 @@
     "import wdtools\n",
     "import data_selector as ds\n",
     "import corv\n",
+    "import WD_models\n",
     "\n",
     "#corv.sdss.make_catalogs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ds.select_sdss4()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 14/14 [00:00<00:00, 57.80it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###### lines = [6562.79, 4861.35, 4340.47, 4101.73, 3970.07, 3889.06, 3835.40, 5893]\n",
     "\n",
@@ -70,17 +73,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "E(B-V) = 0.030 mag\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from __future__ import print_function\n",
     "from astropy.coordinates import SkyCoord\n",
@@ -97,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -121,34 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0     0.021356\n",
-      "1     0.045899\n",
-      "2     0.071237\n",
-      "3     0.040034\n",
-      "4     0.032438\n",
-      "5     0.044381\n",
-      "6     0.058552\n",
-      "7     0.019674\n",
-      "8     0.106274\n",
-      "9     0.034445\n",
-      "10    0.047760\n",
-      "11    0.027300\n",
-      "12    0.055215\n",
-      "Name: E(B-V), dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(catalog['E(B-V)'])"
+    "model = WD_models.load_model('be', 'be', 'o', 'H',\n",
+    "                             HR_bands=('Su-Sg', 'Su'),)\n",
+    "\n",
+    "catalog['wd_u-g'] = [catalog['u{}'.format(wd_pos[i])][i] - catalog['g{}'.format(wd_pos[i])][i] for i in range(len(wd_pos))]\n",
+    "catalog['wd_umag'] = [catalog['u{}'.format(wd_pos[i])][i] for i in range(len(wd_pos))]\n",
+    "\n",
+    "age_cool = model['HR_to_age_cool'](catalog['u-g'], catalog['u'])\n",
+    "\n",
+    "print('bp3_rp3: ', catalog['u-g'], '\\nM_G3: ', catalog['u'])\n",
+    "print('cooling ages:', age_cool, 'Gyr')"
    ]
   },
   {
