--- a/data_selector_sdss4.ipynb
+++ b/data_selector_sdss4.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7083fe1a-938c-4fa5-916d-8395405b8504",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,20 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "106fa20b-090f-4498-9b2b-a5801303579e",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdul = fits.open('../external-dat/binaries/all_columns_catalog.fits')\n",
+    "el_badry = '../external-dat/binaries/all_columns_catalog.fits'\n",
     "\n",
-    "df = pd.DataFrame(hdul[1].data)"
+    "hdul = Table.read(el_badry, format='fits')\n",
+    "df = hdul.to_pandas()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "79e573ff-4e53-4b48-ac7a-76c40f4ae0e3",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,24 +49,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "93090720-003c-4d9d-8e17-5bd21a575f0b",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "ADQL_CODE1 = \"SELECT \\\n",
     "    sdss.original_ext_source_id as bestobjid,\\\n",
     "    gaia_source.source_id\\\n",
-    "    FROM gaiaedr3.gaia_source \\\n",
-    "    JOIN gaiaedr3.sdssdr13_best_neighbour as sdss\\\n",
+    "    FROM gaiadr3.gaia_source \\\n",
+    "    JOIN gaiadr3.sdssdr13_best_neighbour as sdss\\\n",
     "    ON gaia_source.source_id = sdss.source_id      \\\n",
     "    WHERE gaia_source.source_id IN {}\\\n",
     "\".format(tuple(catalog['source_id1']))\n",
     "ADQL_CODE2 = \"SELECT \\\n",
     "    sdss.original_ext_source_id as bestobjid,\\\n",
     "    gaia_source.source_id\\\n",
-    "    FROM gaiaedr3.gaia_source \\\n",
-    "    JOIN gaiaedr3.sdssdr13_best_neighbour as sdss\\\n",
+    "    FROM gaiadr3.gaia_source \\\n",
+    "    JOIN gaiadr3.sdssdr13_best_neighbour as sdss\\\n",
     "    ON gaia_source.source_id = sdss.source_id      \\\n",
     "    WHERE gaia_source.source_id IN {}\\\n",
     "\".format(tuple(catalog['source_id2']))"
@@ -76,16 +73,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "6639702d-b1cd-4fac-8c69-e99b52aa766e",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: Query finished. [astroquery.utils.tap.core]\n",
-      "INFO: Query finished. [astroquery.utils.tap.core]\n"
+     "ename": "HTTPError",
+     "evalue": "OK",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-cf1c3cee84f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjob1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGaia\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaunch_job_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mADQL_CODE1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdump_to_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mjob2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGaia\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlaunch_job_async\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mADQL_CODE2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mdump_to_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0md1\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjob1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0md2\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjob2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_results\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/astroquery/gaia/core.py\u001b[0m in \u001b[0;36mlaunch_job_async\u001b[0;34m(self, query, name, output_file, output_format, verbose, dump_to_file, background, upload_resource, upload_table_name, autorun)\u001b[0m\n\u001b[1;32m    901\u001b[0m         \u001b[0mA\u001b[0m \u001b[0mJob\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    902\u001b[0m         \"\"\"\n\u001b[0;32m--> 903\u001b[0;31m         return TapPlus.launch_job_async(self, query=query,\n\u001b[0m\u001b[1;32m    904\u001b[0m                                         \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    905\u001b[0m                                         \u001b[0moutput_file\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0moutput_file\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.8/site-packages/astroquery/utils/tap/core.py\u001b[0m in \u001b[0;36mlaunch_job_async\u001b[0;34m(self, query, name, output_file, output_format, verbose, dump_to_file, background, upload_resource, upload_table_name, autorun)\u001b[0m\n\u001b[1;32m    438\u001b[0m                 self.__connHandler.dump_to_file(suitableOutputFile,\n\u001b[1;32m    439\u001b[0m                                                 response)\n\u001b[0;32m--> 440\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexceptions\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mHTTPError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreason\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    441\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    442\u001b[0m             location = self.__connHandler.find_header(\n",
+      "\u001b[0;31mHTTPError\u001b[0m: OK"
      ]
     }
    ],
@@ -100,7 +101,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a244675d-3d12-4f44-849e-d1218278ef22",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b956f109-020b-4ab3-8c3b-1c75f207fc75",
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +170,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e763f41c-9555-4bfc-aad2-5ec7481606eb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +183,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08c0c7ae-667c-4884-b0ed-7802b9cdbc36",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d139835e-27dc-48f8-9baf-252547595f2e",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4c353955-6bb4-4204-a5e1-a83c234189a8",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d33730d6-aa81-4f33-8739-6e543009366c",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +367,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "8571d050-28f2-4455-8be3-6a246c5bc8ff",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +386,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "088d0029-13a6-471a-8495-5312b9512dc4",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +429,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "440dffdb-7948-4d84-9056-fa58a10d6810",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +456,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "15530b91-91e2-4cf1-99e5-21ab02531d93",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +479,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6d528994-3315-4179-a5fd-1573a40bcfa5",
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +592,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "66748c76-bd60-4b7f-9598-c23375a5dbd2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +601,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55c754b6-bac1-455b-a8eb-8a935057e684",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -621,7 +608,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -635,7 +622,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
