--- a/01_gaia_gredshift.ipynb
+++ b/01_gaia_gredshift.ipynb
@@ -134,7 +134,7 @@
     "\n",
     "plt.plot(np.linspace(xmin, xmax, num=100), wd_sep(np.linspace(xmin, xmax, num=100)))\n",
     "\n",
-    "plt.savefig('plots/cmd.png')\n",
+    "plt.savefig('plots/selection/cmd.png')\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████| 22563/22563 [00:00<00:00, 88279.27it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████| 22563/22563 [00:00<00:00, 90518.66it/s]\n"
      ]
     }
    ],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9c6ae329",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "ebdb02fe",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
     "\n",
     "plt.plot(np.linspace(xmin, xmax, num=100), wd_sep(np.linspace(xmin, xmax, num=100)))\n",
     "\n",
-    "plt.savefig('plots/wd_ms_cmd.png')\n",
+    "plt.savefig('plots/selection/wd_ms_cmd.png')\n",
     "\n",
     "plt.legend()\n",
     "plt.show()"
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "e5fd6adf",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "44ee74b1",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1ba61dd9",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9438e752",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "44701018",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████| 1796/1796 [00:00<00:00, 7450.92it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████| 1796/1796 [00:00<00:00, 8279.60it/s]\n"
      ]
     }
    ],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "7e179df3",
    "metadata": {},
    "outputs": [
@@ -460,12 +460,12 @@
     "#plt.vlines(np.mean(catalog['g_redshift']), ymin, ymax, linestyles='dashed')\n",
     "plt.title('Pseudoprobability of Chance Align', fontsize=20)\n",
     "plt.xlabel(r'$R$', fontsize=18)\n",
-    "plt.savefig('plots/chancealign.png')"
+    "plt.savefig('plots/selection/chancealign.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "1e7dafae",
    "metadata": {},
    "outputs": [
@@ -507,12 +507,12 @@
     "plt.vlines(np.mean(catalog['g_redshift']), ymin, ymax, linestyles='dashed')\n",
     "plt.title('Gravitational Redshift', fontsize=20)\n",
     "plt.xlabel(r'$RV_{MS} - RV_{WD}$', fontsize=18)\n",
-    "plt.savefig('plots/gredshift.png')"
+    "plt.savefig('plots/redshifts/gredshift.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "356b2699",
    "metadata": {},
    "outputs": [
@@ -548,12 +548,12 @@
     "axes[1].vlines(np.mean(catalog['wd_rv']), ymin, ymax, linestyles='dashed')\n",
     "#axes[1].title('Gravitational Redshift', fontsize=20)\n",
     "axes[1].set_xlabel(r'$RV_{WD}$', fontsize=18)'''\n",
-    "plt.savefig('plots/rvs_nostep.png')"
+    "plt.savefig('plots/redshifts/rvs_nostep.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "c0ceb29a",
    "metadata": {},
    "outputs": [
@@ -596,12 +596,12 @@
     "plt.ylabel(r'White Dwarf Radial Velocity $[km/s]$')\n",
     "plt.grid()\n",
     "plt.legend()\n",
-    "plt.savefig('plots/velocities.png')"
+    "plt.savefig('plots/redshifts/velocities.png')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "c8d35a5f",
    "metadata": {},
    "outputs": [],
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "0845aaea",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "29ff27f1",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "0e8d4acf",
    "metadata": {},
    "outputs": [],
