wrote explainers at headers

--- a/01_data_select.ipynb
+++ b/01_data_select.ipynb
@@ -8,9 +8,9 @@
     "## 01 - Data Selection\n",
     "---\n",
     "\n",
-    "Our parent sample is a catalog of 22563 wide binaries consisting of one main sequence star and one white dwarf from El-Badry, et. al. For each system in this sample, we identify the white dwarf by it's position on the color magnitude diagram. Raidal velocities for the main sequence companion of each wide binary are obtained from Gaia DR3. We restrict our dataset to those systems whose main sequence companion has been measured in Gaia to an error less than $2km/s$ and which Gaia does not flag as a spectroscopic binary. This latter cut ensures that the radial velocity measured by Gaia is not affected by the white dwarf companion. Finally, we correct the sample for chance alignments by removing all wide binaries with 'R_chance_align > 0.1' in the El-Badry, et. al. catalog, as reccomended. \n",
+    "Our parent sample is a catalog of 22563 wide binaries consisting of one main sequence star and one white dwarf from El-Badry, et. al. For each system in this sample, we identify the white dwarf by it's position on the color magnitude diagram. Radial velocities for the main sequence companion of each wide binary are obtained from Gaia DR3. We restrict our dataset to those systems whose main sequence companion has been measured in Gaia to an error less than $2km/s$ and which Gaia does not flag as a spectroscopic binary. This latter cut ensures that the radial velocity measured by Gaia is not affected by the white dwarf companion. Additionally, we correct the sample for chance alignments by removing all wide binaries with ({\\tt\\string R\\_chance\\_align}) $\\leq 0.1$ in the El-Badry, et. al. catalog, as recommended. \n",
     "\n",
-    "Finally, after these cuts are applied, the final step is to discard those systems that do not have both photometry and spectroscopy in the Sloan Digital Sky Survey. This results in 118 systems from SDSS-4, and XX systems from SDSS-5 measured via the focal plane system. "
+    "Finally, after these cuts are applied, we discard those systems that do not have both photometry and spectroscopy in the Sloan Digital Sky Survey and those spectra are visually inspected and systems whose white dwarf companions are not DA are discarded. This results in 66 systems from SDSS-4, and XX systems from SDSS-5 measured via the focal plane system.  "
    ]
   },
   {
