--- a/falcon_rv_validate.ipynb
+++ b/falcon_rv_validate.ipynb
@@ -1,10 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "2112c945-c058-4fc1-9ca9-3e7775446afb",
+   "metadata": {},
+   "source": [
+    "## Validation Of RV's\n",
+    "---\n",
+    "`corv` radial velocities were validated on the high-resolution spectra from Falcon, et.al **talk about validation and all that jazz once you get it done.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "2f0ee451-e784-4e95-88d4-a99825b92cc9",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true,
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -414,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
