--- a/02_sdss5_photo.ipynb
+++ b/02_sdss5_photo.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "f8e37f8c-248e-478e-881d-f566162b6368",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -791,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
