--- a/02_photometry.ipynb
+++ b/02_photometry.ipynb
@@ -5,6 +5,9 @@
    "execution_count": 1,
    "id": "95c92e98",
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "tags": []
    },
    "outputs": [
@@ -1225,7 +1228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
