--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 895,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 896,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +269,7 @@
        "15500"
       ]
      },
-     "execution_count": 896,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 897,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 898,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "Parameters([('teff', <Parameter 'teff', value=15500 (fixed), bounds=[3500:55000]>), ('logg', <Parameter 'logg', value=8.0 +/- 0.0851, bounds=[7.5:9]>), ('radius', <Parameter 'radius', value=0.01455 (fixed), bounds=[0.0001:0.05]>), ('distance', <Parameter 'distance', value=55 (fixed), bounds=[1:2000]>)])"
       ]
      },
-     "execution_count": 898,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 899,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x15552020a5b0>"
+       "<matplotlib.legend.Legend at 0x15552b161e50>"
       ]
      },
-     "execution_count": 899,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -360,7 +360,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 749,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redchi = ((get_model_flux_gaia(param_new) - obs_mag)**2 / (e_obs_mag)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14.69261599, 14.60161599, 14.79961599])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_model_flux_gaia(param_new) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([14.657778, 14.602667, 14.799134])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs_mag"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.29869921503225\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sqrt(sum(redchi)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
